	  - Fixed CURL timeout for internet streaming errors (Daniel Stenberg)
	  - Fixed audio distortion on MP3 file having overly long tag values
	  - Fixed false positive stream detection in the MP3 decoder
	  - Fixed Ogg/Vorbis stream detection in the Vorbis decoder
	  - Fixed 'LRINTF error' raised when reconfiguring MOC
	  - Handle backspace key properly
	  - Fixed pthread stack overflow segfault on OpenBSD.
	  - Fixed segfault when text entry history becomes full
	  - Fixed segfault processing playlists with relative paths
	  - Fixed memory corruptions when toggling tag reading
	  - Fixed severe distortion on 11025Hz 16-bit mono audios
	  - Fixed freeze at end of playing audio file
	  - Fixed server crash when attempting to play a deleted file
	  - Fixed MIME type detection on HTTP redirection
	  - Fixed crash when mixer value is above 100%
	  - Workaround for streams that have the actual title as tags/comments
	  - Indentified cause of "undefined symbol" build errors (node/701)
	  - Plugged all known memory and file descriptor leaks
	* Miscellaneous:
	  - Updated and reformatted mocp manpage and equalizer README file
	  - Made many warning and error reports more informative and consistant
	  - Better logging of more problem determination information
	  - More informative version information display
	  - Introduced MD5-based decoder verification tools
	  - Improved compatibility with 64-bit systems
	  - Improved compatibility with big-endian systems
	  - Moved tags cache to a Berkeley DB
	  - Integration of down-stream distribution patches
	  - Fixed many bugs which crashed MOC

2.4.4
	* Fix crash when saving a playlist with URLs.
	* Fix hang in case of symlink loop (like symlink to parent directory)
	  when adding files recursively to the playlist.
	* Fix bad memory access when using FILL parameter in layouts that caused
	  "FATAL_ERROR: Layout1 is malformed".
	* Fix compilation with newer ffmpeg. (Alexis Ballier)